# slab-allocator

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  slab_example1.cpp  slab_example2.cpp  slab_example3.cpp
include/variti/: slab.hpp
include/variti/util/: slab.hpp  slab_allocator.hpp  slab_ptr.hpp  thread_local_slab.hpp
src/util/: slab.cpp  thread_local_slab.cpp
